Book build Dec 12.

--- a/workflow-basics.Rmd
+++ b/workflow-basics.Rmd
@@ -132,7 +132,7 @@ Here you can see all of the objects that you've created.
 
 1.  Why does this code not work?
 
-    ```{r, error = TRUE}
+    ```{r, error = TRUE,eval=FALSE}
     my_variable <- 10
     my_varıable
     ```
